# prompt-zero

./: .gitignore  COMO_RESOLVER_401.md  DEPLOY_NOW.md  DEPLOY_STATUS_FINAL.md  FRONTEND_502_FIX.md  IMPLEMENTATION_SUMMARY.md  MINIO_CONNECTION_FIX.md  MINIO_SETUP_CHECKLIST.md  NEXT_STEPS.md  OBSERVABILIDADE-IMPLEMENTADO.md  README.md  RELEASE_NOTES.md  STRUCTURE.md  TEST-COVERAGE.md  URGENTE_FIX_401.md  docker-compose.full.yml  docker-compose.observability.yml  quick-start-observability.sh
.husky/: commit-msg  pre-commit
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  railway.json  tsconfig.build.tsbuildinfo
business/: monetize-plan.md  plan.md
docs/: API.md  APRESENTACAO_PROJETO.md  BACKEND.md  CONECTAR-PROMETHEUS-GRAFANA.md  DEPLOY_SUCCESS_NEXT_STEPS.md  FIX_GITHUB_ACTIONS_FAILURES.md  FIX_GRAFANA_DATASOURCE_PROVISIONING.md  FRONTEND.md  GRAFANA_DASHBOARD_SETUP.md  GRAFANA_ERR_TOO_MANY_REDIRECTS_FIX.md  GRAFANA_PROVISIONING.md  GRAFANA_QUICKSTART.md  MIGRACAO-PROMETHEUS.md  MINIO_AVATAR_INTEGRATION.md  OBSERVABILIDADE-CHECKLIST.md  OBSERVABILIDADE-EXEMPLO.md  OBSERVABILIDADE-RAILWAY.md  OBSERVABILIDADE-RESUMO.md  OBSERVABILIDADE-VARIAVEIS.md  OBSERVABILIDADE.md  PROMETHEUS-GRAFANA-RAILWAY.md  PROMETHEUS-QUICKSTART.md  PROMETHEUS-RAILWAY.md  PROMETHEUS-RESUMO.md  RAILWAY_CONFIG_FIXES.md  RAILWAY_CONFIG_VALIDATION.md  RAILWAY_FINAL_SIMPLIFICATION.md  RAILWAY_GITHUB_DEPLOY_GUIDE.md  ROADMAP_NEXT.md  (+10 more)
sdk/python/: README.md  pyproject.toml
sdk/python/promptzero/: __init__.py  client.py  langchain_callback.py
(+355 files in other folders)
