[project]
name = "promptzero-sdk"
version = "0.1.0"
description = "Helpers for PromptZero (LangChain callback + HTTP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["urllib3>=2.0.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptzero*"]
